Implementing live `Editor Settings` reloading and saving logic.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ winit = "0.30.11"           # Window manager
 egui = "0.31.1"             # Immediate UI
 egui_tiles = "0.12.0"       # Layout helper for editor
 egui-winit = "0.31.1"       # State translator winit->egui
-egui-wgpu = "0.31.1"        # Renderer
+egui-wgpu = "0.31.1"        # Binding for egui-wgpu
 wgpu = "24.0.5"             # Renderer
 
 pollster = "0.4"            # Async awaiter
 once_cell = "1.21.3"        # Once setter
+
+serde_json = "1.0"          #Serializing/Deserializing and JSON manipulation
+serde = { version = "1.0", features = ["derive"] }
